@@ -18,6 +18,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Michael Meier
   Martin Boeker
   Felix Wolfsteller
+  Jörg Krause
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
@@ -36,3 +37,4 @@ suggestions:
   Michel Crucifix
   Jonathon Bly
   Felix Wolfsteller
+  hosaka
